@@ -863,6 +863,16 @@ DEFCOMABLETIME=1.0
 DEFSOCTIME=0.10
 DEFCOMSOCTIME=1.0
 
+# The RACEMIXING string allows you to override the default behavior
+# of the system whereby, when two difference races mate through 
+# magical help, a new GenRace is generated that is a mix of their
+# attributes.  This entry may be blank to use the default system,
+# FATHER to always use the fathers race, MOTHER to always use 
+# the mothers race, or a series of comma-delimited entries like
+# RACE1+RACE2=RACE3 to specify that the mixing of two particular
+# races will always generate a specific third race.  Default is blank.
+RACEMIXING= 
+
 ######################################################################
 # Start, Death, and Morgue Room Configuration
 ######################################################################
