@@ -129,6 +129,7 @@
 <INPUT TYPE=HIDDEN NAME=CHANGEDCLASS VALUE="">
 <INPUT TYPE=HIDDEN NAME=CHANGEDLEVEL VALUE="">
 <INPUT TYPE=HIDDEN NAME=ITEM VALUE="@RequestParameter?ITEM@">
+<INPUT TYPE=HIDDEN NAME=SHOPITEM VALUE="@RequestParameter?SHOPITEM@">
 <INPUT TYPE=HIDDEN NAME=ACTION VALUE="MODIFYITEM">
 <TABLE WIDTH=600 BORDER=1 CELLSPACING=0 CELLPADDIN=0>
 <TR>
